--- a/grails-app/conf/application.yml
+++ b/grails-app/conf/application.yml
@@ -22,6 +22,7 @@ environments:
         dataSource:
             dbCreate: update
             url: jdbc:h2:mem:testDb;MVCC=TRUE;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
+        grails.serverURL: "http://localhost:8080"
     production:
         dataSource:
             dbCreate: update
